--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -34,7 +34,6 @@
         background-image: url(../../assets/Images/Interfaces/Menu/gifLeft1.gif);
     }  
 }
-
 .header-undertitle {
     margin: 10px 0 0 0;
     padding-top: 10px;
@@ -66,10 +65,9 @@
     border: 8px solid transparent;
     border-image: url(../../assets/Images/Interfaces/Menu/Border-Image81x81.png) 15 stretch;
 }
-
-@media (min-width: 1024px) {
+@media (min-width: 1260px) {
     .header-title-gif {
-        margin: 2rem 1rem 0 0;
+        margin-top: 2.5rem;
         min-height: 200px;
         min-width: 400px;       
         animation: gifMenuAnimate 80s infinite;
@@ -79,9 +77,9 @@
         border-image: url(../../assets/Images/Interfaces/Menu/Border-Image81x81.png) 30 stretch;
     }
 }
-
 @media (min-width: 1600px) {
     .header-title-gif {
+        margin-top: 1.2rem;
         min-height: 250px;
         min-width: 500px;       
         animation: gifMenuAnimate 80s infinite;
