--- a/src/components/Regles/Module/Module.css
+++ b/src/components/Regles/Module/Module.css
@@ -6,16 +6,31 @@
     text-decoration: underline;
     padding: 1rem;
 }
-.button button {
-    max-height: 4rem;
-    color: black;
-    font-size: 1.5rem;
-    margin-right: 2rem;
+.img-top {
+    width: 140px;
+    border-style: solid;
+    border-width: 2px 4px 2px 4px;
+    border-color: rgb(85, 85, 85);
+    border-radius: 1.5rem;
+}
+.img-bot {
+    width: 80px;
+    max-height: 80px;
+    margin: 0.5rem 7rem 0.5rem 7rem;
+    border-style: solid;
+    border-width: 2px 2px 2px 2px;
+    border-color: rgb(85, 85, 85);
+    border-radius: .5rem;
+}
+.list-img {
+    display: flex;
+    justify-content: space-evenly;
+    padding: 1.5rem 0.5rem;
 }
 .title {
     text-align: center;
 }
-.Phase {
+.Module {
     display: flex;
     flex-direction: column;
     margin-bottom: 2rem;
@@ -29,13 +44,21 @@
         -12px 0px 6px rgba(0, 173, 196, 0.2);
     background: rgba(44, 44, 44, 0.6);
 }
-.Phase-list {
+.Module-list {
     margin: 0.5rem;
     border-style: solid;
     border-width: 2px 4px 2px 4px;
     border-color: rgba(0, 0, 0);
     border-radius: 2rem;
     background: rgba(60, 60, 60, 0.8);
+}
+.Module-list.img {
+    max-width: 30%;
+}
+.Module-SA {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
 h2 {
     background-color: rgb(114, 114, 114,0.8);
