--- a/src/components/Regles/Victoire/Victoire.css
+++ b/src/components/Regles/Victoire/Victoire.css
@@ -15,7 +15,7 @@
 .title {
     text-align: center;
 }
-.Phase {
+.Victoire {
     display: flex;
     flex-direction: column;
     margin-bottom: 2rem;
@@ -29,7 +29,7 @@
         -12px 0px 6px rgba(0, 173, 196, 0.2);
     background: rgba(44, 44, 44, 0.6);
 }
-.Phase-list {
+.Victoire-list {
     margin: 0.5rem;
     border-style: solid;
     border-width: 2px 4px 2px 4px;
@@ -37,12 +37,12 @@
     border-radius: 2rem;
     background: rgba(60, 60, 60, 0.8);
 }
+.Victoire-list p {
+    padding: 0.5rem 3rem 0.5rem 3rem;
+}
 h2 {
     background-color: rgb(114, 114, 114,0.8);
     border-radius: 1.6rem 1.6rem 0 0;
     padding: 0.5rem;
     text-align: center;
-}
-p {
-    padding: 0.5rem 3rem 0.5rem 3rem;
 }
