--- a/src/components/Regles/Regles.css
+++ b/src/components/Regles/Regles.css
@@ -1,39 +1,37 @@
-.TIPS {
-    font-size: 2.2rem;
-    font-weight: bolder;
-    color: black;
-    text-shadow: 0.5px 0.5px 0.8em white, 0 0 0.5em rgb(0, 0, 160), 0 0 0.2em rgb(0, 0, 160);
-    text-decoration: underline;
-    padding: 1rem;
-}
-.title {
-    text-transform: uppercase;
-}
-.Order {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+.button-nav {
+    width: 43%;
     margin-top: 2rem;
     margin-bottom: 2rem;
-    padding: 1rem;
+    display: flex;
+    justify-content: center;
+    background: rgba(60, 60, 60, 0.8);
     border-style: solid;
     border-width: 6px 2px 6px 2px;
-    border-color: rgba(0, 0, 0);
+    border-color: rgb(85, 85, 85);
     border-radius: 2rem;
-    box-shadow: 
-        12px 0px 6px rgba(0, 173, 196, 0.2),
-        -12px 0px 6px rgba(0, 173, 196, 0.2);
-    background: rgba(44, 44, 44, 0.6);
 }
-.Order-list {
-    display: flex;
-    flex-direction: column;
-    max-width: 45%;
-    margin: 0.5rem;
-    padding: 0.5rem;
-    border-style: solid;
-    border-width: 2px 4px 2px 4px;
-    border-color: rgba(0, 0, 0);
+.button-nav button {
+    padding: .5rem;
+    margin: 1rem 1.5rem;
+}
+.button-nav p {
+    padding-top: .5rem;
+    margin: 1rem 0;
+}
+#btn-nav img {
+    width: 50px;
+}
+#btn-nav {
+    display: none;
+    position: fixed;
+    bottom: 120px;
+    right: 30px;
+    border: none;
+    background-color: red;
+    color: white;
+    padding: 10px;
     border-radius: 2rem;
-    background: rgba(60, 60, 60, 0.8);
+}
+#btn-nav:hover {
+    background-color: #555;
 }
