--- a/src/components/Acceuil/Acceuil.css
+++ b/src/components/Acceuil/Acceuil.css
@@ -1,9 +1,14 @@
-.body-top {
-    margin: 4rem 0 4rem 0;
+.acceuil {
+    background: rgba(60, 60, 60, 0.9);
+    border-style: solid;
+    border-width: 6px 2px 6px 2px;
+    border-color: rgb(85, 85, 85);
+    border-radius: 2rem;
+    padding: 0.5rem 0;
 }
 .question {
-    margin: 2rem;
-    padding: 1rem 2rem;
+    /* margin: 2rem;
+    padding: 1rem 2rem; */
     border-style: solid;
     border-width: 6px 2px 6px 2px;
     border-color: rgba(0, 0, 0, 0.8);
@@ -16,5 +21,41 @@
 .question-title {
     text-decoration: underline;
     padding-bottom: 1rem;
-
+}
+@media (min-width: 320px) {
+    .body-top {
+        margin: 2rem 0 2rem 0;
+    }
+    .acceuil {
+        border-radius: 2rem;
+        padding: 0.5rem 0;
+        font-size: 1rem;
+    }
+    .question {
+        margin: 0 0 2rem 0;
+        padding: 1rem 1rem;
+    }
+    .question ul {
+        padding: 0 0 0 1rem;
+    }
+    .question-title {
+        font-size: 1.5rem;
+    }
+}@media (min-width: 1024px) {
+    .body-top {
+        margin: 4rem 0 4rem 0;
+    }
+    .acceuil {
+        font-size: 2rem;
+    }
+    .question {
+        margin: 2rem;
+        padding: 1rem 2rem;
+    }
+    .question ul {
+        padding: 0 0 0 2rem;
+    }
+    .question-title {
+        font-size: 2.2rem;
+    }
 }
