--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -42,37 +42,70 @@
     border: 8px solid transparent;
     border-image: url(../../assets/Images/Interfaces/Menu/Border-Image81x81.png) 15 stretch;
 }
-.container-xl {
-    padding: 0;
-}
-.img-fluid {
-    width: 500px;
-    margin: 2rem;
-}
 .header {
     /* border-bottom: 6px solid rgba(0, 0, 0, 0.8); */
     background: rgba(80, 80, 80, 0.9);
     border-style: solid;
     border-width: 0 2px 6px 2px;
     border-color: rgba(0, 0, 0, 0.8);
-    border-radius: 0 0 2rem 2rem;
+
     box-shadow: 0px 10px 6px rgba(0, 173, 196, 0.2);
 }
 .header-title {
     max-width: 500px;
 }
 .header-undertitle {
-    margin: 10px 0 2rem 8rem;
-    padding: 1rem;
     color: white;
     background: rgba(0, 0, 100, 0.6);
-    font-size: 1.5rem;
-    width: 20rem;
     border: 8px solid transparent;
     border-image: url(../../assets/Images/Interfaces/Menu/Border-Image81x81.png) 15 stretch;
 }
-@media (min-width: 1260px) {
+@media (max-width:512px) {
+    /* 360px */
+    .img-fluid {
+        width: 350px;
+        margin: .5rem 0;
+    }
+    .container-xl {
+        margin: 0 0 0 0;
+        padding: 0;
+    }
     .header-title-gif {
+        display: none;
+    }
+    .m-3 {
+        display: none;
+    }
+    .header {
+        display: initial;
+        margin: 0;
+        border-radius: 0;
+    }
+    .header-undertitle {
+        margin: 0 4.5rem .5rem 4.1rem!important;
+        padding: .5rem 0!important;
+        width: 13rem;
+        font-size: 1.2rem;
+    }
+}
+@media (min-width: 1260px) {
+    .m-3 {
+        display: initial;
+    }
+    .img-fluid {
+        width: 500px;
+        margin: 2rem;
+    }
+    .container-xl {
+        padding: 0;
+    }
+    .header {
+        display: block;
+        margin: initial;
+        border-radius: 0 0 2rem 2rem;
+    }
+    .header-title-gif {
+        display: block;
         margin: 2.5rem 0;
         min-height: 200px;
         min-width: 400px;       
@@ -82,18 +115,17 @@
         border: 16px solid transparent;
         border-image: url(../../assets/Images/Interfaces/Menu/Border-Image81x81.png) 30 stretch;
     }
+    .header-undertitle {
+        margin: 10px 0 2rem 8rem;
+        padding: 1rem;
+        font-size: 1.5rem;
+        width: 20rem;
+    }
 }
 @media (min-width: 1600px) {
     .header-title-gif {
         margin: 1.2rem 0;
         min-height: 250px;
         min-width: 500px;       
-        animation: gifMenuAnimate 80s infinite;
-        background-repeat: no-repeat;
-        background-size: 100% 100%;
-        border: 16px solid transparent;
-        border-image: url(../../assets/Images/Interfaces/Menu/Border-Image81x81.png) 30 stretch;
     }
 }
-
-
