--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -6,23 +6,32 @@ a {
 .router-link-active {
     color: rgba(0, 137, 155, 0.418);
 }
-@media (min-width: 1024px) {
-
+.navigation {
+    color: white;
+    background: linear-gradient(to bottom,rgb(10, 10, 10),rgba(63, 63, 63, 0.9));
+    border-style: solid;
+    border-width: 0 0 1px 0;
+    border-color: rgb(0, 0, 0);
+    border-radius: 0 0 2rem 2rem;
+}
+.navigation:hover {
+    box-shadow: 0px 10px 6px rgba(0, 173, 196, 0.8);
+}
+@media (min-width: 320px) {
     .navigation {
-        color: white;
+        margin: 0 .15em;
+        font-size: .8rem;
+    }
+    .navigation a {
+        padding: .7rem 0 .5rem 0;
+    }
+}
+@media (min-width: 1024px) {
+    .navigation {
         margin: -0.38rem 1rem;
-        background: linear-gradient(to bottom,rgb(10, 10, 10),rgba(63, 63, 63, 0.9));
-        /* border: 0px solid rgba(0, 0, 0, 0.2); */
-        border-style: solid;
-        border-width: 0 0 1px 0;
-        border-color: rgb(0, 0, 0);
-        border-radius: 0 0 2rem 2rem;
         font-size: 1.5rem;
     }
     .navigation a {
         padding: 0.2rem 2rem 0.5rem 2rem;
-    }
-    .navigation:hover {
-        box-shadow: 0px 10px 6px rgba(0, 173, 196, 0.8);
     }
 }
