--- a/src/components/Regles/Regles.css
+++ b/src/components/Regles/Regles.css
@@ -1,7 +1,63 @@
+@media (max-width: 512px) {
+    .button-nav {
+        width: 80%;
+        margin-top: 2rem;
+        padding-top: .5rem;
+        padding-bottom: .2rem;
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .button-nav p {
+        padding: 0 4rem;
+    }
+    .button-nav button {
+        padding: .5rem;
+        margin: .5rem .3rem;
+        font-size: 1rem;
+    }
+    .button-nav p {
+        padding-top: 0;
+        margin: 0;
+    }
+    #btn-nav img {
+        width: 30px!important;
+    }
+    #btn-nav {
+        bottom: 120px;
+        right: 10px!important;
+    }
+}
+@media (min-width: 1260px) {
+    .button-nav {
+        width: 52%;
+        margin-top: 2rem;
+        margin-bottom: 2rem;
+    }
+    .button-nav button {
+        padding: .5rem;
+        margin: 1rem .5rem;
+    }
+    .button-nav p {
+        padding-top: .5rem;
+        margin: 1rem 0;
+    }
+}
+@media (min-width: 1600px) {
+    .button-nav {
+        width: 43%;
+        margin-top: 2rem;
+        margin-bottom: 2rem;
+    }
+    .button-nav button {
+        padding: .5rem;
+        margin: 1rem 1.5rem;
+    }
+    .button-nav p {
+        padding-top: .5rem;
+        margin: 1rem 0;
+    }
+}
 .button-nav {
-    width: 43%;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
     display: flex;
     justify-content: center;
     background: rgba(60, 60, 60, 0.8);
@@ -9,14 +65,6 @@
     border-width: 6px 2px 6px 2px;
     border-color: rgb(85, 85, 85);
     border-radius: 2rem;
-}
-.button-nav button {
-    padding: .5rem;
-    margin: 1rem 1.5rem;
-}
-.button-nav p {
-    padding-top: .5rem;
-    margin: 1rem 0;
 }
 #btn-nav img {
     width: 50px;
