--- a/src/components/Regles/Victoire/Victoire.css
+++ b/src/components/Regles/Victoire/Victoire.css
@@ -49,3 +49,27 @@ h2 {
     padding: 0.5rem;
     text-align: center;
 }
+@media (max-width: 512px) {
+    .TIPS {
+        font-size: 2rem;
+        padding: 0;
+    }
+    .button button {
+        display: none;
+    }
+    .Victoire {
+        padding-left: .5rem;
+        padding-right: .5rem;
+    }
+    .Victoire p {
+        padding: 0.5rem 1rem;
+        margin-top: .5rem;
+    }
+    .Victoire-list h2 {
+        padding: 0.5rem .2rem;
+        font-size: 1.3rem;
+    }
+    .Victoire-list {
+        margin: 0.5rem 0;
+    }    
+}
