--- a/src/components/Combat/Simulation.css
+++ b/src/components/Combat/Simulation.css
@@ -14,6 +14,7 @@
     width: 50%;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     border-right: 1px solid white;
     border-radius: .3rem;
 }
@@ -27,9 +28,25 @@
     border-radius: .3rem;
     text-align: right;
 }
-.front {
+.figurine {
     width: 50%;
 }
-.soutien {
+.carte {
     width: 50%;
+}
+.atk-figurine {
+    width: 100px;
+    height: 100px;
+}
+.atk-card {
+    width: 192px;
+    height: 297px;
+}
+.def-figurine {
+    width: 100px;
+    height: 100px;
+}
+.def-card {
+    width: 192px;
+    height: 297px;
 }
