--- a/src/components/Combat/Combat.css
+++ b/src/components/Combat/Combat.css
@@ -20,6 +20,9 @@
         -12px 0px 6px rgba(0, 173, 196, 0.2);
     background: rgba(50, 50, 50, 0.95);
 }
+.btn {
+    margin: 1rem auto;
+}
 .Combat-list h2 {
     text-decoration: underline;
 }
@@ -31,20 +34,60 @@
     display: flex;
     flex-direction: row;
 }
+.select.def {
+    padding-left: 2rem;
+}
 .select {
     width: 50%;
-}
-.select select {
-    padding: 0 2rem;
-    margin-top: .2rem;
-    margin-bottom: .2rem;
 }
 .selection {
     display: flex;
     flex-direction: row;
 }
-.selection p {
+.selection input {
     margin-top: .2rem;
-    margin-bottom: .2rem;
-    width: 20%;
+    height: 1.5rem;
+    width: 1.5rem;
+}
+@media (min-width: 1260px) {
+    .selection p {
+        margin-top: .2rem;
+        margin-bottom: .2rem;
+        width: 28%;
+    }
+    .selection label {
+        width: 28%;
+    }
+    .select select {
+        padding: 0 1rem;
+        margin-top: .2rem;
+        margin-bottom: .2rem;
+    }
+    .select.def {
+        padding-left: 1rem;
+    }
+    .select-list {
+        margin-bottom: 1rem;
+    }
+}
+@media (min-width: 1800px) {
+    .selection p {
+        margin-top: .2rem;
+        margin-bottom: .2rem;
+        width: 20%;
+    }
+    .selection label {
+        width: 20%;
+    }
+    .select select {
+        padding: 0 2rem;
+        margin-top: .2rem;
+        margin-bottom: .2rem;
+    }
+    .select.def {
+        padding-left: 2rem;
+    }
+    .select-list {
+        margin: 0 2rem 1rem 3rem;
+    }
 }
